tests/algorithms/x/Elixir/data_structures/binary_tree/is_sorted.out
error: undefined variable "concat"
    │
 11 │         res = concat.(res, inorder(tree, left_idx))
    │               ^^^^^^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/binary_tree/is_sorted.exs:11:15: Main.inorder/2

    error: undefined variable "concat"
    │
 19 │         res = concat.(res, inorder(tree, right_idx))
    │               ^^^^^^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/binary_tree/is_sorted.exs:19:15: Main.inorder/2

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/data_structures/binary_tree/is_sorted.exs: cannot compile module Main (errors have been logged)